More files added

--- a/Day 1 Practice.ipynb
+++ b/Day 1 Practice.ipynb
@@ -23,11 +23,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e405c29d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def inc(x):\n",
+    "    return x+1\n",
+    "def operate(func,x):\n",
+    "    result = func(x)\n",
+    "    return result\n",
+    "print(operate(inc,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "03fb17db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9aa00984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Python is awesome\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_msg(message):\n",
+    "    greeting = \"hello\"\n",
+    "    \n",
+    "    def printer():\n",
+    "        print(greeting,message)\n",
+    "        \n",
+    "    return printer\n",
+    "\n",
+    "func = print_msg(\"Python is awesome\")\n",
+    "func()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4c1089d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing printer function\n",
+      "Hello World\n",
+      "Finished execution\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printer():\n",
+    "    print(\"Hello World\")\n",
+    "    \n",
+    "def display_info(func):\n",
+    "\n",
+    "    def inner():\n",
+    "        print(\"Executing\", func.__name__,\"function\")\n",
+    "        func()\n",
+    "        print(\"Finished execution\")\n",
+    "    return inner\n",
+    "\n",
+    "decorator_func = display_info(printer)\n",
+    "decorator_func()"
+   ]
   },
   {
    "cell_type": "code",
@@ -826,11 +921,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b80bde8b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from turtle import *\n",
+    "color(\"red\")\n",
+    "begin_fill()\n",
+    "pensize(3)\n",
+    "left(50)\n",
+    "forward(133)\n",
+    "circle(50,200)\n",
+    "right(140)\n",
+    "circle(50,200)\n",
+    "forward(133)\n",
+    "end_fill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6a13f887",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (457753874.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_26680\\457753874.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    python -m pip install turtle\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "python -m pip install turtle"
+   ]
   }
  ],
  "metadata": {
